--- a/config.ini
+++ b/config.ini
@@ -2,4 +2,10 @@
 MAX_HP = 200
 WINDOW_WIDTH = 800
 WINDOW_HEIGHT = 800
-PLAYER_SPEED = 5.0
+PLAYER_SPEED = 3.0
+
+[Controls]
+MOVE_UP = w
+MOVE_DOWN = s
+MOVE_LEFT = a
+MOVE_RIGHT = d
